Restructured directories of repository

--- a/src/Screen2.ui
+++ b/src/Screen2.ui
@@ -62,7 +62,7 @@
              <string/>
             </property>
             <property name="pixmap">
-             <pixmap>assets/NeutralFaceSmall.png</pixmap>
+             <pixmap>../assets/NeutralFaceSmall.png</pixmap>
             </property>
            </widget>
           </item>
